<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="0dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/nunito"
        android:text="Multi App Hub"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/fontawesome"
        android:text="@string/fa_gear"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Вертикальный LinearLayout для строк -->
    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

        <!-- Строка 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonCalculator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_apps_shape_circled"
                android:fontFamily="@font/fontawesome"
                android:text="@string/fa_calculator"
                android:textColor="@color/white"
                android:textSize="64sp" />

            <Button
                android:id="@+id/buttonLocator"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_apps_shape_circled"
                android:fontFamily="@font/fontawesome"
                android:text="@string/fa_map"
                android:textColor="@color/white"
                android:textSize="64sp" />
        </LinearLayout>

        <!-- Строка 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonMediaPlayer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_apps_shape_circled"
                android:fontFamily="@font/fontawesome"
                android:text="@string/fa_music"
                android:textColor="@color/white"
                android:textSize="64sp" />

            <Button
                android:id="@+id/buttonNetwork"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_apps_shape_circled"
                android:fontFamily="@font/fontawesome"
                android:text="@string/fa_signal"
                android:textColor="@color/white"
                android:textSize="64sp" />
        </LinearLayout>

        <!-- Строка 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonClient"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_apps_shape_circled"
                android:fontFamily="@font/fontawesome"
                android:text="@string/fa_desktop"
                android:textColor="@color/white"
                android:textSize="64sp" />

            <Button
                android:id="@+id/buttonSocket"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_apps_shape_circled"
                android:fontFamily="@font/fontawesome"
                android:text="@string/fa_plug"
                android:textColor="@color/white"
                android:textSize="64sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>