<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMain"
        android:layout_width="370dp"
        android:layout_height="370dp"
        android:layout_marginBottom="250dp"

        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSettings">

        <ImageView
            android:id="@+id/imageViewMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/picturenotfound" />

    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="40dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/fontawesome"
        android:text="@string/fa_ellipsis_v"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <LinearLayout
        android:id="@+id/linearLayoutTools"
        android:layout_width="364dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSeekBar"
        app:layout_goneMarginTop="100dp">

        <Button
            android:id="@+id/buttonBackwardStep"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/fontawesome"
            android:text="@string/fa_step_backward"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonBackward"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/fontawesome"
            android:text="@string/fa_backward"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/fontawesome"
            android:gravity="center"
            android:text="@string/fa_play_circle"
            android:textColor="@color/button_numbers_edge"
            android:textSize="64sp" />

        <Button
            android:id="@+id/buttonForward"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/fontawesome"
            android:text="@string/fa_forward"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonForwardStep"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/fontawesome"
            android:text="@string/fa_step_forward"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSeekBar"
        android:layout_width="363dp"
        android:layout_height="107dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewMain">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarMusic"
        android:layout_width="366dp"
        android:layout_height="39dp"
        android:maxHeight="8dp"
        android:minHeight="8dp"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/seekbar_thumb"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutTools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewMain" />

    <SeekBar
        android:id="@+id/seekBarMusic2"
        android:layout_width="366dp"
        android:layout_height="39dp"
        android:maxHeight="8dp"
        android:minHeight="8dp"
        android:progressDrawable="@drawable/seekbar_progress_transparent"
        android:thumb="@drawable/seekbar_thumb"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutTools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewMain" />

    <com.egeereyzee.multiapp.RangeSeekBar
        android:id="@+id/RangeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftThumbValue="0"
        app:maxValue="100"
        app:minValue="0"
        app:rightThumbValue="100"
        app:thumbBorderColor="#2196F3"
        app:thumbColor="#FFFFFF"
        app:thumbRadius="14dp"
        app:trackColor="#E0E0E0"
        app:trackHeight="4dp"
        app:trackProgressColor="#2196F3" />



</androidx.constraintlayout.widget.ConstraintLayout>